Add Message and Notification component with JS, cleanup of common classes

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>all</module>
         <module>core</module>
+        <module>ui.frontend</module>
         <module>ui.apps</module>
     </modules>
 
