--- a/ui.frontend/package.json
+++ b/ui.frontend/package.json
@@ -15,6 +15,8 @@
     "sync": "websight-localsync target-folder=dist provider-root-suffix=bulma/web_root"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
+    "bulma-pricingtable": "^0.2.0"
   },
   "devDependencies": {
     "webpack": "^5.69.1",
@@ -29,6 +31,12 @@
     "ts-loader": "^9.2.6",
     "glob-import-loader": "^1.2.0",
     "eslint": "^8.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.7.0"
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "css-loader": "^6.5.1",
+    "postcss": "^8.2.15",
+    "postcss-loader": "^3.0.0",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
+    "autoprefixer": "^9.2.1"
   }
 }
