--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <sling.install.package.host>localhost</sling.install.package.host>
         <sling.install.package.port>8080</sling.install.package.port>
         <sling.install.package.path>/apps/websight-package-manager-service/bin/install</sling.install.package.path>
-        <jupiter.version>5.6.0</jupiter.version>
+        <jupiter.version>5.9.0</jupiter.version>
+        <mockito.version>4.6.1</mockito.version>
         <bnd.version>5.1.2</bnd.version>
         <sling.caconfig.bnd.version>1.0.2</sling.caconfig.bnd.version>
         <sling.models.bnd.version>1.0.0</sling.models.bnd.version>
@@ -483,7 +484,7 @@
             <dependency>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>org.apache.sling.testing.sling-mock.junit5</artifactId>
-                <version>3.0.2</version>
+                <version>3.3.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -495,13 +496,13 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>4.4.0</version>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-junit-jupiter</artifactId>
-                <version>4.4.0</version>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
