--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>core</module>
         <module>ui.frontend</module>
         <module>ui.apps</module>
+        <module>tests</module>
     </modules>
 
     <properties>
