Feauture/functional tests (#18) configuration
* Add cypress tests

* Add cypress tests

* Fix formatting

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>core</module>
         <module>ui.frontend</module>
         <module>ui.apps</module>
+        <module>tests</module>
     </modules>
 
     <properties>
@@ -41,6 +42,9 @@
 
         <sling.user>wsadmin</sling.user>
         <sling.password>wsadmin</sling.password>
+
+        <e2e.skip>true</e2e.skip>
+        <mongo.container.image>mongo:4.4.6</mongo.container.image>
     </properties>
 
     <build>
@@ -299,6 +303,13 @@
                     </plugins>
                 </pluginManagement>
             </build>
+        </profile>
+
+        <profile>
+            <id>e2e</id>
+            <properties>
+                <e2e.skip>false</e2e.skip>
+            </properties>
         </profile>
 
     </profiles>
