Run percy tests only on scheduled days

--- a/tests/end-to-end/pom.xml
+++ b/tests/end-to-end/pom.xml
@@ -265,7 +265,7 @@
             </goals>
             <phase>prepare-package</phase>
             <configuration>
-<!--              <skip>${e2e.skip}</skip>-->
+              <skip>${e2e.skip}</skip>
               <arguments>install</arguments>
             </configuration>
           </execution>
@@ -276,7 +276,7 @@
             </goals>
             <phase>pre-integration-test</phase>
             <configuration>
-<!--              <skip>${e2e.skip}</skip>-->
+              <skip>${e2e.skip}</skip>
               <arguments>cypress verify</arguments>
               <environmentVariables>
                 <CI>1</CI>
@@ -290,7 +290,7 @@
             </goals>
             <phase>pre-integration-test</phase>
             <configuration>
-<!--              <skip>${e2e.skip}</skip>-->
+              <skip>${e2e.skip}</skip>
               <arguments>cypress info</arguments>
               <environmentVariables>
                 <CI>1</CI>
@@ -304,7 +304,7 @@
             </goals>
             <phase>integration-test</phase>
             <configuration>
-              <skip>true</skip>
+              <skip>${e2e.skip.cypress}</skip>
               <arguments>cypress run test:ci</arguments>
               <environmentVariables>
                 <CYPRESS_baseUrl>http://localhost:${wsce.port}</CYPRESS_baseUrl>
