--- a/.github/workflows/build-checks.yml
+++ b/.github/workflows/build-checks.yml
@@ -44,12 +44,12 @@ jobs:
           mkdir -p ~/.m2/repository
           cp .github/settings.xml ~/.m2/settings.xml
           echo "CODEARTIFACT_AUTH_TOKEN=${CODEARTIFACT_AUTH_TOKEN}" >> $GITHUB_ENV
-      - name: Build and test cypress with Maven
+      - name: Build and test with Maven
         env:
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
         if: ${{ github.event_name == 'push' }}
         run: mvn --batch-mode --update-snapshots clean install -P e2e
-      - name: Build and test visual with Maven
+      - name: Build and test visual with Maven and Percy
         env:
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
