--- a/.github/workflows/build-checks.yml
+++ b/.github/workflows/build-checks.yml
@@ -1,6 +1,11 @@
 name: Build checks
 
-on: [push]
+on:
+  push:
+
+  schedule:
+    - cron: '0 3 * * 1,3,5'
+
 
 env:
   AWS_REGION: "eu-central-1"
@@ -42,4 +47,12 @@ jobs:
       - name: Build and test with Maven
         env:
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+        if: ${{ github.event_name == 'push' }}
         run: mvn --batch-mode --update-snapshots clean install -P e2e
+      - name: Build and test visual with Maven and Percy
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        if: ${{ github.event_name == 'schedule' }}
+        run: mvn --batch-mode --update-snapshots clean install -P visual-tests
+
