--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
         <sling.password>wsadmin</sling.password>
 
         <e2e.skip>true</e2e.skip>
+        <e2e.skip.cypress>true</e2e.skip.cypress>
+        <e2e.skip.visual>true</e2e.skip.visual>
         <mongo.container.image>mongo:4.4.6</mongo.container.image>
     </properties>
 
@@ -309,6 +311,17 @@
             <id>e2e</id>
             <properties>
                 <e2e.skip>false</e2e.skip>
+                <e2e.skip.cypress>false</e2e.skip.cypress>
+                <e2e.skip.visual>true</e2e.skip.visual>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>visual-tests</id>
+            <properties>
+                <e2e.skip>false</e2e.skip>
+                <e2e.skip.cypress>true</e2e.skip.cypress>
+                <e2e.skip.visual>false</e2e.skip.visual>
             </properties>
         </profile>
 
