--- a/pom.xml
+++ b/pom.xml
@@ -332,7 +332,7 @@
             <dependency>
                 <groupId>pl.ds.websight</groupId>
                 <artifactId>websight-pages-core-api</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>2.0.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
