--- a/tests/end-to-end/pom.xml
+++ b/tests/end-to-end/pom.xml
@@ -328,7 +328,7 @@
                 <CYPRESS_baseUrl>http://localhost:${wsce.port}</CYPRESS_baseUrl>
                 <CYPRESS_loginUsername>${websight.admin.username}</CYPRESS_loginUsername>
                 <CYPRESS_loginPassword>${websight.admin.password}</CYPRESS_loginPassword>
-                <PERCY_TOKEN>${env.PERCY_TOKEN}</PERCY_TOKEN>
+                <PERCY_TOKEN>${env.BULMA_PERCY_TOKEN}</PERCY_TOKEN>
                 <TERM>xterm</TERM>
                 <CI>1</CI>
               </environmentVariables>
