--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -15,13 +15,13 @@
     limitations under the License.
 -->
 
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>pl.ds.bulma</groupId>
     <artifactId>bulma</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>bulma-distribution</artifactId>
@@ -46,13 +46,13 @@
     <dependency>
       <groupId>pl.ds.bulma</groupId>
       <artifactId>bulma-backend</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>0.1.0-SNAPSHOT</version>
       <type>pom</type>
     </dependency>
     <dependency>
       <groupId>pl.ds.bulma</groupId>
       <artifactId>bulma-frontend</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>0.1.0-SNAPSHOT</version>
       <type>pom</type>
     </dependency>
   </dependencies>
@@ -80,6 +80,9 @@
         <version>1.6.6</version>
         <extensions>true</extensions>
         <configuration>
+          <replacePropertyVariables>
+            project.version
+          </replacePropertyVariables>
           <aggregates>
             <aggregate>
               <classifier>websight-cms-bulma-project</classifier>
