content onal demo page

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <modules>
     <module>application</module>
+    <module>content</module>
     <module>distribution</module>
     <module>tests</module>
   </modules>
