Adding content to distribution

--- a/distribution/src/main/features/bulma-project.json
+++ b/distribution/src/main/features/bulma-project.json
@@ -25,6 +25,9 @@
     "pl.ds.websight.publishing.staticprocessor.PagePublishProcessor": {
       "shorten.paths": true
     }
-  }
+  },
+  "content-packages:ARTIFACTS|true": [
+    "pl.ds.bulma:bulma-content:zip:${project.version}"
+  ]
 }
   
