Styles and js scripts were not available

--- a/distribution/src/main/docker/nginx/default.conf
+++ b/distribution/src/main/docker/nginx/default.conf
@@ -16,16 +16,16 @@ server {
     listen       80;
     index        homepage.html;
 
-    location /apps/bulma-project/webroot {
+    location /apps/bulma/web_root {
         root   /usr/share/nginx/html;
     }
 
     location ~ (.html|/)$ {
-        root   /usr/share/nginx/html/content/bulma-project/pages;
+        root   /usr/share/nginx/html/content/bulma/pages;
     }
 
     location / {
-        root   /usr/share/nginx/html/content/bulma-project;
+        root   /usr/share/nginx/html/content/bulma;
     }
 
 }
