--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
 
     <!-- WebSight CMS Version -->
     <websight.cms.version>1.5.0</websight.cms.version>
+    <!-- WebSight Dependencies Versions -->
+    <websight.rest.version>1.0.10</websight.rest.version>
+    <websight.pages.version>3.0.0</websight.pages.version>
+    <websight.request.parameters.version>1.0.5</websight.request.parameters.version>
 
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
