--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -108,6 +108,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-assets-core-api</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
