--- a/application/pom.xml
+++ b/application/pom.xml
@@ -258,6 +258,12 @@
         <version>3.1.0</version>
         <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>pl.ds.websight</groupId>
+        <artifactId>websight-assets-core-api</artifactId>
+        <version>1.0.0</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
