--- a/application/pom.xml
+++ b/application/pom.xml
@@ -168,18 +168,6 @@
         <version>${websight.rest.version}</version>
         <scope>provided</scope>
       </dependency>
-      <dependency>
-        <groupId>pl.ds.websight</groupId>
-        <artifactId>websight-pages-core-api</artifactId>
-        <version>${websight.pages.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>pl.ds.websight</groupId>
-        <artifactId>websight-request-parameters-support</artifactId>
-        <version>${websight.request.parameters.version}</version>
-        <scope>provided</scope>
-      </dependency>
 
       <dependency>
         <groupId>org.osgi</groupId>
@@ -276,6 +264,12 @@
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>pl.ds.websight</groupId>
+        <artifactId>websight-assets-core-api</artifactId>
+        <version>1.0.0</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
