--- a/application/bulma-table-service/pom.xml
+++ b/application/bulma-table-service/pom.xml
@@ -19,9 +19,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <parent>
-    <artifactId>bulma-application</artifactId>
     <groupId>pl.ds.bulma</groupId>
-    <version>1.0.5-SNAPSHOT</version>
+    <artifactId>bulma-application</artifactId>
+    <version>1.0.7-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
