--- a/application/bulma-table-service/pom.xml
+++ b/application/bulma-table-service/pom.xml
@@ -83,6 +83,18 @@
       <groupId>pl.ds.websight</groupId>
       <artifactId>websight-rest-framework</artifactId>
     </dependency>
+    <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-request-parameters-support</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-ui-framework-actions</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-pages-editor-view</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>javax.inject</groupId>
