--- a/application/pom.xml
+++ b/application/pom.xml
@@ -34,6 +34,7 @@
     <module>frontend</module>
     <module>backend</module>
     <module>bulma-table-service</module>
+    <module>bulma-table-view</module>
   </modules>
 
   <properties>
@@ -172,6 +173,12 @@
         <groupId>pl.ds.websight</groupId>
         <artifactId>websight-request-parameters-support</artifactId>
         <version>${websight.request.parameters.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>pl.ds.websight</groupId>
+        <artifactId>websight-ui-framework-actions</artifactId>
+        <version>${websight.ui.actions.version}</version>
         <scope>provided</scope>
       </dependency>
 
