--- a/distribution/src/main/features/bulma-project.json
+++ b/distribution/src/main/features/bulma-project.json
@@ -11,6 +11,10 @@
     {
       "id": "pl.ds.bulma:bulma-table-service:${project.version}",
       "start-order": "25"
+    },
+    {
+      "id": "pl.ds.bulma:bulma-table-view:${project.version}",
+      "start-order": "25"
     }
   ],
   "configurations": {
