--- a/application/bulma-table-view/package.json
+++ b/application/bulma-table-view/package.json
@@ -1,1 +1,11 @@
-{}
+{
+  "eslintIgnore": ["target/*"],
+  "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.31.11"
+  },
+  "dependencies": {
+    "prop-types": "^15.8.1"
+  }
+}
