--- a/application/bulma-table-view/pom.xml
+++ b/application/bulma-table-view/pom.xml
@@ -39,7 +39,7 @@
   <build>
     <resources>
       <resource>
-        <directory>src/main/webapp</directory>
+        <directory>target/dist</directory>
       </resource>
     </resources>
     <plugins>
@@ -63,6 +63,24 @@
             <goals>
               <goal>npm</goal>
             </goals>
+          </execution>
+          <execution>
+            <id>npm run lint</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run lint</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm run babel</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run babel</arguments>
+            </configuration>
           </execution>
 <!--          <execution>-->
 <!--            <id>npm run prod</id>-->
