--- a/application/bulma-table-service/pom.xml
+++ b/application/bulma-table-service/pom.xml
@@ -126,6 +126,11 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
