#145 created extensions module and moved tableservice and tableview into it

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -33,8 +33,7 @@
   <modules>
     <module>frontend</module>
     <module>backend</module>
-    <module>bulma-table-service</module>
-    <module>bulma-table-view</module>
+    <module>extensions</module>
   </modules>
 
   <properties>
