--- a/application/extensions/bulma-table-view/pom.xml
+++ b/application/extensions/bulma-table-view/pom.xml
@@ -20,7 +20,7 @@
     <groupId>pl.ds.bulma</groupId>
     <artifactId>bulma-application</artifactId>
     <version>1.0.11-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
