#168 Add initial files

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -35,6 +35,7 @@
     <module>backend</module>
     <module>bulma-table-service</module>
     <module>bulma-table-view</module>
+    <module>bulma-color</module>
   </modules>
 
   <properties>
