#168 Add color extension - draft, correct pom.xml

--- a/distribution/src/main/features/bulma-project.json
+++ b/distribution/src/main/features/bulma-project.json
@@ -15,6 +15,10 @@
     {
       "id": "pl.ds.bulma:bulma-table-view:${project.version}",
       "start-order": "25"
+    },
+    {
+      "id": "pl.ds.bulma:bulma-color:${project.version}",
+      "start-order": "25"
     }
   ],
   "configurations": {
