--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -61,6 +61,12 @@
       <version>1.0.11-SNAPSHOT</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>pl.ds.bulma</groupId>
+      <artifactId>bulma-color</artifactId>
+      <version>1.0.11-SNAPSHOT</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
 
   <build>
