WOS-173 paths in sources apps -> libs

--- a/distribution/src/main/docker/nginx/default.conf
+++ b/distribution/src/main/docker/nginx/default.conf
@@ -16,7 +16,7 @@ server {
     listen       80;
     index        homepage.html;
 
-    location /apps/bulma/web_root {
+    location /libs/bulma/web_root {
         root   /usr/share/nginx/html;
     }
 
