--- a/application/extensions/bulma-color/pom.xml
+++ b/application/extensions/bulma-color/pom.xml
@@ -22,12 +22,12 @@
     <groupId>pl.ds.bulma</groupId>
     <artifactId>bulma-application</artifactId>
     <version>1.0.11-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <artifactId>bulma-color</artifactId>
-  <name>Bulma Color</name>
-  <description>Bulma Color</description>
+  <name>Bulma Components Project - Bulma Color RTE module</name>
+  <description>Bulma Color RTE module</description>
 
   <properties>
     <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
@@ -157,16 +157,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.2.0</version>
-        <configuration>
-          <configLocation>google_checks.xml</configLocation>
-          <consoleOutput>true</consoleOutput>
-          <encoding>UTF-8</encoding>
-          <failsOnError>true</failsOnError>
-          <failOnViolation>true</failOnViolation>
-          <violationSeverity>${checkstyle.severity.level}</violationSeverity>
-          <suppressionsLocation>google_checks_suppressions.xml</suppressionsLocation>
-          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-        </configuration>
         <dependencies>
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
