--- a/application/extensions/pom.xml
+++ b/application/extensions/pom.xml
@@ -33,6 +33,7 @@
     <modules>
     <module>bulma-table-service</module>
     <module>bulma-table-view</module>
+    <module>bulma-color</module>
     </modules>
 
     <properties>
