WOS-186 Possibility to install changes on websight.cloud

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -158,6 +158,36 @@
         </pluginManagement>
       </build>
     </profile>
+    <profile>
+      <id>autoInstallBundleEnvironment</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.sling</groupId>
+              <artifactId>sling-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>install-bundle</id>
+                  <goals>
+                    <goal>install</goal>
+                  </goals>
+                  <configuration>
+                    <slingUrl>http://${env.WEBSIGHT_URL}:${env.WEBSIGHT_PORT}/system/console
+                    </slingUrl>
+                    <user>${env.WEBSIGHT_ADMIN_USER}</user>
+                    <password>${env.WEBSIGHT_ADMIN_PASSWORD}</password>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
   </profiles>
 
   <dependencyManagement>
