#210 add code extension

--- a/application/extensions/pom.xml
+++ b/application/extensions/pom.xml
@@ -34,6 +34,7 @@
     <module>bulma-table-service</module>
     <module>bulma-table-view</module>
     <module>bulma-color</module>
+    <module>bulma-code</module>
     </modules>
 
     <properties>
