--- a/distribution/src/main/features/bulma-project.json
+++ b/distribution/src/main/features/bulma-project.json
@@ -19,6 +19,10 @@
     {
       "id": "pl.ds.bulma:bulma-color:${project.version}",
       "start-order": "25"
+    },
+    {
+      "id": "pl.ds.bulma:bulma-code:${project.version}",
+      "start-order": "25"
     }
   ],
   "configurations": {
