210 rte code extension (#213)
* #210 add code extension

* #210 add code extension

* #210 move code extension to new folder

* #210 Correct paths

--- a/application/extensions/pom.xml
+++ b/application/extensions/pom.xml
@@ -33,7 +33,7 @@
     <modules>
     <module>bulma-table-service</module>
     <module>bulma-table-view</module>
-    <module>bulma-color</module>
+    <module>bulma-richtext</module>
     </modules>
 
     <properties>
