--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -63,7 +63,7 @@
     </dependency>
     <dependency>
       <groupId>pl.ds.bulma</groupId>
-      <artifactId>bulma-color</artifactId>
+      <artifactId>bulma-richtext</artifactId>
       <version>1.3.1-SNAPSHOT</version>
       <type>pom</type>
     </dependency>
