--- a/application/pom.xml
+++ b/application/pom.xml
@@ -261,7 +261,11 @@
         <version>1.18.22</version>
         <scope>provided</scope>
       </dependency>
-
+      <dependency>
+        <groupId>javax.json</groupId>
+        <artifactId>javax.json-api</artifactId>
+        <version>1.1.4</version>
+      </dependency>
       <dependency>
         <groupId>javax.inject</groupId>
         <artifactId>javax.inject</artifactId>
