--- a/application/extensions/bulma-richtext/pom.xml
+++ b/application/extensions/bulma-richtext/pom.xml
@@ -75,6 +75,7 @@
                   -exportcontents: ${removeall;${packages;VERSIONED};${packages;CONDITIONAL}}
                   -noextraheaders: true
                   -snapshot: SNAPSHOT
+                  -plugin org.apache.sling.bnd.models.ModelsScannerPlugin
                 ]]></bnd>
             </configuration>
           </execution>
@@ -206,4 +207,42 @@
       </extension>
     </extensions>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.models.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.annotation.versioning</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.service.metatype.annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+    </dependency>
+  </dependencies>
 </project>
