--- a/application/pom.xml
+++ b/application/pom.xml
@@ -330,6 +330,11 @@
         <version>1.0.0</version>
         <scope>provided</scope>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>4.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
