WOS-289 page done

--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -98,6 +98,10 @@
       <artifactId>websight-rest-framework</artifactId>
     </dependency>
     <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-pages-core-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
     </dependency>
