--- a/application/pom.xml
+++ b/application/pom.xml
@@ -335,6 +335,12 @@
         <artifactId>commons-collections4</artifactId>
         <version>4.4</version>
       </dependency>
+      <dependency>
+        <groupId>pl.ds.websight</groupId>
+        <artifactId>websight-pages-core-api</artifactId>
+        <version>3.0.0</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
