--- a/application/backend/pom.xml
+++ b/application/backend/pom.xml
@@ -74,6 +74,10 @@
       <artifactId>org.apache.sling.api</artifactId>
     </dependency>
     <dependency>
+      <groupId>pl.ds.websight</groupId>
+      <artifactId>websight-fragments-registry</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.models.api</artifactId>
     </dependency>
